refactor: pageResponse 생성자 인자 변경